# dvv-coupling-framework

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pixi.toml  pyproject.toml  requirements.txt
.agent/: code-reviewer.md
.github/agents/: research-code-reviewer.agent.md
.github/workflows/: quarto-publish.yml  tests.yml
analysis/: 00_quickstart.ipynb  01_thermoelastic_model.ipynb  02_hydrological_loading.ipynb  03_nonlinear_elasticity.ipynb  04_stress_anisotropy.ipynb  05_rheological_models.ipynb  06_sensitivity_validity.ipynb  07_tier1_california_test.py  __init__.py  config.py  coupling_diagnostic_cases.py  coupling_tier_tests.py  fetch_geospatial.py  interpret_fitted_params.py  jgr_main_figures.py  plot_tier1.py  poroelastic_framework.py
codameter/: __init__.py  window_selection.py
docs/: code-review-2026-06-06.md  data_sources.md  troubleshooting.md  tutorials.yaml
docs/ai_documentation/: 01_prompts_log.md  02_chain_of_thought.md  03_model_card.md  04_journal_selection_discussion.md  05_convergence_and_evaluation.md  06_ai_traceability.md  07_ai_statement_gpt55_review.md  08_full_research_audit_2026-06-25.md  (+1 more)
paper/: agu_jgr_submission_template.tex  agutex_overleaf_template.tex  build_jgr_pdf.py  build_quarto.py  paper_dvv_unified_framework.md  references.bib  supporting_information.md
paper/site/: _quarto.yml  (+2 more)
presets/: agricultural_vadose.yaml  cascadia_subduction.yaml  nepal_postquake.yaml  parkfield_case3_tidal.yaml
tests/: conftest.py  test_config.py  test_poroelastic_framework.py  test_reproducibility.py  test_window_selection.py
(+37 files in other folders)
